BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Sync_Tracking_vod__c.object
<CustomObject>
    <description>This object stores information about successful sync processes performed by VMobile</description>
    <fields>
        <fullName>Canceled_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the user clicked the Cancel button during the sync.</description>
        <label>Sync Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time_BMS_SHARED__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Download_Processed_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marked as checked if the download from the server to VMobile completed with no errors.</description>
        <label>Download Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Media_Processed_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the CLM content download completed successfully.</description>
        <label>Media Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Retries_vod__c</fullName>
        <description>Total number of retries during the download process.  This includes the metadata, data, media and VInsights portions of the sync, where applicable.</description>
        <label># Retries</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Upload_Errors_vod__c</fullName>
        <description>Number of upload errors reported to the user.</description>
        <label># Upload Errors</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Uploads_vod__c</fullName>
        <description>Number of objects uploaded to the server.  Calls and Orders count as one per top level object, even though they may contain many objects (e.g. an Order with 10 Order Lines, counts as 1 upload, not 11).</description>
        <label># Uploads</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_VTrans_vod__c</fullName>
        <description>Number of files in the VTrans folder.  For autosends this value is not set.</description>
        <label># Unprocessed Trans Files</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Successful_Sync_vod__c</fullName>
        <description>Contains 1 if the sync was successful.</description>
        <formula>IF(OR(AND(Upload_Processed_vod__c ,VInsights_Processed_vod__c ,Download_Processed_vod__c,NOT(ISNULL( Sync_Completed_Datetime_vod__c ))),
AND(Upload_Processed_vod__c, ISPICKVAL(Sync_Type_vod__c, &quot;Autosend_vod&quot;))),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Successful Sync</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sync_Completed_Datetime_vod__c</fullName>
        <description>Time at which the sync completed.</description>
        <label>Sync Completed Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sync_Duration_vod__c</fullName>
        <description>Duration of the sync in seconds.</description>
        <formula>IF(NOT(ISNULL( Sync_Completed_Datetime_vod__c  )),(Sync_Completed_Datetime_vod__c - Sync_Start_Datetime_vod__c )*60*24*60,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sync Duration (secs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sync_Start_Datetime_vod__c</fullName>
        <description>Time when the sync was initiated.</description>
        <label>Sync Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sync_TimeDif_BMS_SHARED__c</fullName>
        <formula>CreatedDate - Sync_Start_Datetime_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sync TimeDif</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sync_Type_vod__c</fullName>
        <description>Type of synchronization that occurred, such as Incremental, User-triggered or Forced (a.k.a. triggered by the tablet because of new fields in the describe).</description>
        <label>Sync Type</label>
        <picklist>
            <picklistValues>
                <fullName>Autosend_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incremental_Sync_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User_Full_Sync_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forced_Full_Sync_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upload_Processed_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the upload from VMobile to the server completed with no errors.</description>
        <label>Upload Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VInsights_Processed_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the download of VInsights from the server to VMobile completed with no errors.  This will always be checked for orgs that are not configured for VInsights.</description>
        <label>VInsights Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version_vod__c</fullName>
        <description>Version of the tablet performing the sync.</description>
        <label>Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Synchronization Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sync_Type_vod__c</columns>
        <columns>Version_vod__c</columns>
        <columns>Successful_Sync_vod__c</columns>
        <columns>Sync_Duration_vod__c</columns>
        <columns>Sync_Completed_Datetime_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BMS_Full_Syncs_Yesterday</fullName>
        <columns>NAME</columns>
        <columns>Sync_Type_vod__c</columns>
        <columns>Version_vod__c</columns>
        <columns>Successful_Sync_vod__c</columns>
        <columns>Sync_Duration_vod__c</columns>
        <columns>Sync_Completed_Datetime_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Sync_Type_vod__c</field>
            <operation>equals</operation>
            <value>User_Full_Sync_vod</value>
        </filters>
        <label>BMS - Full Syncs Yesterday</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BMS_Syncs_Today</fullName>
        <columns>NAME</columns>
        <columns>Sync_Type_vod__c</columns>
        <columns>Version_vod__c</columns>
        <columns>Successful_Sync_vod__c</columns>
        <columns>Sync_Start_Datetime_vod__c</columns>
        <columns>Sync_Duration_vod__c</columns>
        <columns>Sync_Completed_Datetime_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Sync_Type_vod__c</field>
            <operation>equals</operation>
            <value>User_Full_Sync_vod</value>
        </filters>
        <label>BMS - Full Syncs Today</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ST{000000000}</displayFormat>
        <label>Synchronization Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Synchronization Trackings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>